fix positioning of app tiles and clipping on :hover

--- a/src/main.css
+++ b/src/main.css
@@ -94,15 +94,7 @@ h2 {
   margin-bottom: .5em;
 }
 
-.app-list-outer {
-  bottom: 20px;
-  left: 20px;
-  position: absolute;
-  right: 20px;
-}
-
 .scrollable--h {
-  height: 290px;
   overflow: hidden;
 }
 
@@ -116,8 +108,17 @@ h2 {
   overflow-y: hidden;
 }
 
+.app-list-outer {
+  bottom: 1rem;
+  height: 300px;
+  left: 1rem;
+  padding: .2rem 0;
+  position: absolute;
+  right: 1rem;
+}
+
 .app-list {
-  margin: -1rem 0 0 -1rem;
+  margin: -.8rem 0 0 -.8rem;
   white-space: nowrap;
 }
 
@@ -127,6 +128,10 @@ h2 {
   min-width: 250px;
   padding: 1rem 0 0 1rem;
   white-space: normal;
+}
+
+.app-tile:last-child {
+  padding-right: .2rem;
 }
 
 .app-tile__icon {
